freest/test/prog/Valid/Functional/DiffEqTypeNames/DiffEqTypeNames.fst
module DiffEqTypeNames where

type T : *T
type T = Int
type U : *T
type U = Int

n : T
n = 5

main : U
main = n
