freest/test/prog/Invalid/Typing/ExpectsTooManyArgsK/ExpectsTooManyArgsK.fst
module ExpectsTooManyArgsK where

type MyBox : *T
type MyBox a = a
